[package]
name = "rest_api_actix_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
serde = {version = "1.0.163", features = ["derive"] }
serde_json = "1"
futures = "0.3"
dotenv = "0.15.0"
tokio-postgres = "0.7.8"
tokio = "1.28.2"
derive_more = "0.99.17"
